add authorization in docs
