# docs/swagger.json
@@ -78,6 +78,13 @@
                         "schema": {
                             "$ref": "#/definitions/handler.CreateOpeningRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -173,6 +180,13 @@
                         "schema": {
                             "$ref": "#/definitions/handler.UpdateOpeningRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -220,6 +234,13 @@
                         "description": "Opening identification",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -391,6 +412,13 @@
                         "schema": {
                             "$ref": "#/definitions/handler.UpdateUserRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -438,6 +466,13 @@
                         "description": "User Identification",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
