# handler/delete_opening_handler.go
@@ -17,6 +17,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param id path int true "Opening identification"
+// @Param Authorization header string true "With the bearer started"
 // @Success 200 {object} DeleteOpeningResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
